--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-window.location.href = 'https://securelink-sm.com/smartlink/?a=154908&sm=15706&mt=26&s1=zhrl1';
+窗口。位置。href  = 'https://securelink-sm.com/smartlink/?a=154908&sm=15706&mt=26&s1=zhrl1';
 </script>
